--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<htm>
-<head>
-<title>Please! Wait ...</title>
-</head>
-<body>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml">    
+  <head>      
+    <title>Please! Wait ...</title>      
+    <meta http-equiv="refresh" content="0;URL='https://www.ahetuk.com/'" />    
+  </head>    
+  <body> 
+    <p>Click Here <a href="https://www.ahetuk.com/">
+      www.ahetuk.com</a>.</p> 
+  </body>  
 </html>
