--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="0;URL='https://www.ahetuk.com/p/panel.html'" />    
   </head>    
   <body> 
-    <p>Click Here <a href="https://www.ahetuk.com/">
+    <p>Click Here <a href="https://www.ahetuk.com/p/panel.html">
       www.ahetuk.com</a>.</p> 
   </body>  
 </html>
