--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta http-equiv="refresh" content="10;URL='https://www.ahetuk.com/p/panel.html'" />    
 <style>
 a:link {
-  color: green;
-  background-color: white;
+  color: yellow;
+  background-color: black;
   text-decoration: none;
 }
 a:visited {
@@ -20,7 +20,7 @@ a:hover {
 }
 a:active {
   color: blue;
-  background-color: yellow;
+  background-color: green;
   text-decoration: underline;
 }
 </style>
